Prevent copy button changing width on state changes
Before, as the button text changed on state changes (e.g. to display the loading or success label), the button would change its width.

As a result, other elements around the copy button would change position etc.

This patch ensures the button width never changes on state changes. The downside however is that the success/loading texts should usually be shorter than the initial button label – otherwise they’ll be cut off.

--- a/app/components/copy_button/copy_button.css
+++ b/app/components/copy_button/copy_button.css
@@ -1,11 +1,22 @@
+.CopyButton {
+  position: relative;
+}
+
 .CopyButton-loading,
 .CopyButton-success {
   display: none;
+
+  position: absolute;
+  left: 0;
+  right: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .CopyButton[data-state='loading'] .CopyButton-label,
 .CopyButton[data-state='success'] .CopyButton-label {
-  display: none;
+  visibility: hidden;
 }
 
 .CopyButton[data-state='loading'] .CopyButton-loading {
